# cosmogram

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  LICENSE  compose.yaml  manage.py  pyproject.toml  receiver.py  requirements.txt  tmp.py
.github/workflows/: deployment-stage.yml
container/: Dockerfile  run.sh  unarchive_app.sh
nginx/: Dockerfile  default.conf
scripts/: start_api.sh
src/apps/accounts/: managers.py  models.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py  0002_rename_email_verified_user_confirmed_and_more.py  0002_user_description.py  0003_user_avatar.py
src/apps/accounts/repositories/: accounts.py
src/apps/accounts/serializers/: accounts.py
src/apps/accounts/services/: accounts.py
src/apps/chat/: consumers.py  models.py  serializers.py  urls.py  views.py
src/apps/chat/migrations/: 0001_initial.py
src/apps/content/: serializers.py  urls.py  views.py
src/apps/content/migrations/: 0001_initial.py  0002_tag_post_tags.py  0003_file_alter_image_image.py  (+2 more)
src/apps/notifications/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/apps/scientific_article/: apps.py  urls.py
src/config/: asgi.py  base.py  celery.py  dataclasses.py  logging.py  swagger.py  test.py  urls.py  wsgi.py
src/utils/: conts.py  functions.py  permissions.py
src/utils/bases/: api_client_mixins.py  docker_config.py  executable.py  handler.py  models.py  publisher.py  redis_config.py  repositories.py  services.py  types.py  use_case.py
src/utils/vertex/: client.py  vertex_service.py
(+27 files in other folders)
